--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -19,6 +19,9 @@
   .btn-primary:hover {
     @apply bg-[#b0cdee];
   }
+  .btn-standard {
+    @apply relative flex justify-center py-2.5 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-gray-700 hover:bg-gray-900 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 disabled:bg-indigo-400 disabled:cursor-not-allowed transition-colors duration-200;
+  }
 }
 
 /* Custom base styles */
