--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -33,7 +33,7 @@
       sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #f8fafc;
+    background-color: #ffffff;
     color: #1e293b;
   }
 
