refactor: Replace button elements with Button component across multiple files for consistency

--- a/frontend/src/styles/index.css
+++ b/frontend/src/styles/index.css
@@ -3,22 +3,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@layer components {
-  .btn-primary {
-    @apply bg-[#87CEEB] text-white font-semibold py-2.5 px-5 rounded-xl transition-colors duration-200 ease-in-out;
-  }
-  .btn-primary:hover {
-    @apply bg-[#6495ED];
-  }
-  .btn-standard {
-    @apply relative flex justify-center py-2.5 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-[#4682B4] hover:bg-[#5F9EA0] focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 disabled:bg-indigo-400 disabled:cursor-not-allowed transition-colors duration-200;
-  }
-.form-input-custom {
-    @apply appearance-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm;
-  }
-}
 
-/* Custom base styles */
+
+/*
+ * =========================================
+ * Base Styles
+ * =========================================
+ */
 @layer base {
   html,
   body,
@@ -49,7 +40,12 @@ background-image: url('../../public/backgrounds/summer-1.jpg');
 }
 
 
-@keyframes grid {
+/*
+ * =========================================
+ * Animations
+ * =========================================
+ */
+ @keyframes grid {
   0% {
     transform: translateY(-50%);
   }
